fix: pull code before running deploy script to avoid stale cache
- Workflow does git pull first, then runs deploy.sh
- Remove git pull from deploy.sh to avoid redundancy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,10 @@ jobs:
   deploy:
     runs-on: self-hosted
     steps:
-      - name: Deploy
+      - name: Pull latest code
         run: |
           cd /opt/sms-api
-          bash deploy.sh
+          git pull origin main
+
+      - name: Run deploy script
+        run: bash /opt/sms-api/deploy.sh
