--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Pull latest code
         run: |
           cd /opt/sms-api
-          git pull origin main
+          git fetch origin main
+          git reset --hard origin/main
 
       - name: Run deploy script
         run: bash /opt/sms-api/deploy.sh
